--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,10 @@ a:visited {
   background: #ffe5e5;
 }
 
+.bg-green{
+    background: #94ffbf;
+}
+
 .card {
   padding: 15px 20px;
   margin-bottom: 20px;
